[project]
name = "intrupt-py-sdk"
version = "0.0.1a2"
description = "Client SDK + framework adapters for the human-in-the-loop approval API."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "langgraph>=0.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "fastapi>=0.110",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
]



[tool.setuptools]
packages = ["intrupt_py_sdk.core", "intrupt_py_sdk.adapters", "intrupt_py_sdk.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
# Make `intrupt_py_sdk` (this directory's parent) and `example/` (for the
# example agent.py) importable from inside the SDK's tests.
pythonpath = ["..", "../example"]
