[project]
name = "intrupt-py-sdk"
version = "0.0.1a8"
description = "Python Client SDK + framework adapters for the human-in-the-loop approval API."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "langgraph>=0.2",
]

[project.urls]
"Source Code" = "https://github.com/Aegmis/intrupt-py-sdk"
Repository = "https://github.com/Aegmis/intrupt-py-sdk"

[project.optional-dependencies]
google-adk    = ["google-adk>=0.1"]
openai-agents = ["openai-agents>=0.0.3"]
crewai        = ["crewai>=0.1"]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "fastapi>=0.110",
    "python-dotenv>=1.0",
    "uvicorn>=0.30",
]


[tool.coverage.run]
source = ["intrupt_py_sdk"]
omit = [
    "tests/*",
    "*/tests/*",
    "test_*",
    "*_test.py"
]
branch = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
# Make `intrupt_py_sdk` (this directory's parent) and `example/` (for the
# example agent.py) importable from inside the SDK's tests.
pythonpath = ["..", "example"]
